Restore hours tracker only
